# AirHack_2018

./: .ENV  .ENV.dev  .dockerignore  .editorconfig  .pre-commit-config.yaml  README.md  README.rst  docker-compose.dev.yml  docker-compose.yml
flaskapp/: Dockerfile  Makefile  Pipfile  conftest.py  gecko.py  runcelery.py  setup.cfg
flaskapp/app/: app_instance.py
flaskapp/app/bootstrap/: __init__.py  config.py  json_encoder.py
flaskapp/app/cli/: __init__.py  cli.py  database.py  postman.py  seed.py  server.py
flaskapp/app/database/: geolocation.py  mixins.py  softdelete.py
flaskapp/app/database/functions/: __init__.py  datetime.py  uuid.py
flaskapp/app/database/types/: guid.py
flaskapp/app/extensions/: __init__.py
flaskapp/app/extensions/api/: __init__.py  api.py  http_exceptions.py  model.py  namespace.py  parameters.py  resource.py  webargs_parser.py
flaskapp/app/extensions/celery/: __init__.py
flaskapp/app/extensions/database/: __init__.py
flaskapp/app/extensions/health/: __init__.py  (+2 more)
flaskapp/app/modules/: __init__.py
flaskapp/app/tasks/: __init__.py
flaskapp/app/utils/: dict.py  imports.py  utc.py
flaskapp/migrations/: alembic.ini  env.py  script.py.mako
flaskapp/migrations/versions/: 2017-12-12-08-47-48-7e5dd2aaf648-accounts.py  2018-02-01-13-02-51-6c90cec29429-.py  2018-02-01-13-19-09-25f946a8b960-.py  2018-02-01-13-48-52-a9d597f496f5-.py  2018-02-01-14-11-33-b504f1f08205-.py
flaskapp/tests/app/: test_app_base.py
flaskapp/testutils/: __init__.py  client.py  fixtures_services.py
flaskapp/testutils/factories/: __init__.py  base.py
(+115 files in other folders)
