[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[metadata]
name = gecko
description = Flask skeleton application
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[flake8]
ignore = D203, F401
exclude =
	.tox,
	.git,
	__pycache__,
	build,
	dist,
	migrations/*
	tests/fixtures/*,
	flaskapp/migrations/*,
	flaskapp/tests/fixtures/*,
	*.pyc,
	*.egg-info,
	.cache,
	.eggs
max-complexity = 10
import-order-style = google
application-import-names = flake8
max-line-length = 99
statistics = True

[yapf]
based_on_style = google
spaces_before_comment = 4
join_multiple_lines = true
column_limit = 99
align_closing_bracket_with_visual_indent = true

[coverage:run]
source =
    app
